12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
@@ -1,5 +1,3 @@
-﻿l_english:
-
 l_english:
 
 ### Ideas ###
@@ -13,6 +11,8 @@ OTT_reparation_payments_from_greece:0 "War reparations from Greece"
 OTT_reparation_payments_from_greece_desc:0 "Greece pays war reparations to the Ottomans."
 
 ### Opinion Modifiers ###
+Balkans_hates_bulgaria:0 "Anti-Bulgarian sentiment"
+Balkans_hates_neighbours:0 "Hegemon of the Balkans"
 Belgrade_Pact_closed_congress:0 "Closed the Belgrade Congress"
 Belgrade_Pact_anti_bulgaria:0 "Against Bulgaria"
 Belgrade_Pact_joined_boo:0 "Joined Pact against Bulgaria"
@@ -45,11 +45,11 @@ pact.2.a:0 "Announce our support for the Belgrade Pact."
 pact.2.b:0 "We have no interest in expanding in this direction."
 
 pact.3.t:0 "[From.GetName] joins the Belgrade Pact"
-pact.3.d:0 "The [From.GetAdj] government has announced they will attend the congress in Belgrade and formally join the Belgrade Pact."
+pact.3.d:0 "The [From.GetAdjective] government has announced they will attend the congress in Belgrade and formally join the Belgrade Pact."
 pact.3.a:0 "Together for peace!"
 
 pact.4.t:0 "[From.GetName] won't join the Belgrade Pact"
-pact.4.d:0 "The [From.GetAdj] government has announced they will, for the time being, not be part of any formal alliance aimed at Bulgaria."
+pact.4.d:0 "The [From.GetAdjective] government has announced they will, for the time being, not be part of any formal alliance aimed at Bulgaria."
 pact.4.a:0 "We don't need them."
 
 pact.5.t:0 "A second front"
@@ -77,11 +77,11 @@ pact.9.a:0 "Announce our support for Bulgaria!"
 pact.9.b:0 "We must avoid Balkan entanglements."
 
 pact.10.t:0 "[From.GetName] announces support for Bulgaria"
-pact.10.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between them and the Belgrade Pact. Whether this will be limited to arms deliveries or that [From.GetNameDef] will intervene with their army, remains unclear."
+pact.10.d:0 "The [From.GetAdjective] government has announced today that they will support Bulgaria in the case of a war between them and the Belgrade Pact. Whether this will be limited to arms deliveries or that [From.GetNameDef] will intervene with their army, remains unclear."
 pact.10.a:0 "This is not good."
 
 pact.11.t:0 "[From.GetName] announces support for us"
-pact.11.d:0 "The [From.GetAdj] government has announced today that they will support Bulgaria in the case of a war between us and the Belgrade Pact. Whether this will be limited to arms deliveries or that [From.GetNameDef] will intervene with their army, remains unclear, but hopefully this will keep them from declaring war."
+pact.11.d:0 "The [From.GetAdjective] government has announced today that they will support Bulgaria in the case of a war between us and the Belgrade Pact. Whether this will be limited to arms deliveries or that [From.GetNameDef] will intervene with their army, remains unclear, but hopefully this will keep them from declaring war."
 pact.11.a:0 "Thanks, [From.GetName]."
 
 pact.12.t:0 "The new Romanian foreign policy"
@@ -174,7 +174,7 @@ pact.30.a:0 "Send aid to Bulgaria."
 pact.30.b:0 "We can't do anything."
 
 pact.31.t:0 "[From.GetName] refuses to help us"
-pact.31.d:0 "Although they had promised to support us in the case of a war between us and Serbia, the [From.GetAdj] government has declared they cannot help us in the ongoing conflict between Bulgaria and the Belgrade Pact. This is a major outrage, and we will not forget this!"
+pact.31.d:0 "Although they had promised to support us in the case of a war between us and Serbia, the [From.GetAdjective] government has declared they cannot help us in the ongoing conflict between Bulgaria and the Belgrade Pact. This is a major outrage, and we will not forget this!"
 pact.31.a:0 "Traitors!"
 
 pact.32.t:0 "The Fourth Balkan War"
@@ -243,7 +243,7 @@ pact.45.d:0 "Though the Balkan War brought us huge success initially as we manag
 pact.45.a:0 "We will not forget this!"
 
 pact.46.t:0 "[From.GetName] refuses our peace offer"
-pact.46.d:0 "Although we offered great concessions to our enemy, the [From.GetAdj] government has refused our peace offer, stating we will be utterly crushed."
+pact.46.d:0 "Although we offered great concessions to our enemy, the [From.GetAdjective] government has refused our peace offer, stating we will be utterly crushed."
 pact.46.a:0 "We need to turn the tide!"
 
 pact.47.t:0 "We're losing the Balkan War"
@@ -265,8 +265,8 @@ pact.50.d:0 "The Fourth Balkan War has not quite had the successes we had in min
 pact.50.a:0 "Are they invincible?"
 
 pact.51.t:0 "Peace is signed, Bulgarian victory"
-pact.51.desc_no_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, renounce our claims on Central Macedonia and the Belgrade Pact will be disbanded."
-pact.51.desc_payments_to_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, renounce our claims on Central Macedonia and pay war reparations to the Ottomans. The Belgrade Pact will be disbanded."
+pact.51.desc_no_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, cede Thessaloniki, renounce our claims on Central Macedonia and the Belgrade Pact will be disbanded."
+pact.51.desc_payments_to_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, cede Thessaloniki, renounce our claims on Central Macedonia and pay war reparations to the Ottomans. The Belgrade Pact will be disbanded."
 pact.51.a:0 "Are they invincible?"
 
 pact.52.t:0 "Southern Macedonia"
@@ -307,7 +307,7 @@ pact.59.d:0 "The Serbians have pressured the Ottomans to cede Thrace to us but t
 pact.59.a:0 "We will get it later."
 
 pact.60.t:0 "[From.GetName] won't join the Belgrade Pact"
-pact.60.d:0 "The [From.GetAdj] government has announced they don't want to be part of the Belgrade Pact, not even when offered territorial concessions."
+pact.60.d:0 "The [From.GetAdjective] government has announced they don't want to be part of the Belgrade Pact, not even when offered territorial concessions."
 pact.60.a:0 "Unfortunate."
 
 pact.61.t:0 "Status of Dobrudzha"
@@ -330,12 +330,12 @@ pact.64.a:0 "Divide Bulgaria into occupation zones!"
 pact.64.b:0 "Let them have their independence."
 
 pact.65.t:0 "[From.GetName] calls for joint occupation of Bulgaria"
-pact.65.d:0 "The [From.GetAdj] government has called for a joint occupation of the remaing lands of Bulgaria. In the future, a much smaller Bulgarian state may be carved out of these territories. For now we have the right to govern our occupation zone as we see, even plundering it from anything valueable."
+pact.65.d:0 "The [From.GetAdjective] government has called for a joint occupation of the remaing lands of Bulgaria. In the future, a much smaller Bulgarian state may be carved out of these territories. For now we have the right to govern our occupation zone as we see, even plundering it from anything valueable."
 pact.65.a:0 "Very well."
 pact.65.b:0 "No, we keep our new lands!"
 
 pact.66.t:0 "[From.GetName] refuses to set up occupation zones"
-pact.66.d:0 "The [From.GetAdj] government has refused our demand to set up occupation zones in the former Bulgarian territories. They stated that all the land they have is now rightfully theirs. Relations with [From.GetName] are greatly damaged, and the only thing that rests us is to cancel our military alliance."
+pact.66.d:0 "The [From.GetAdjective] government has refused our demand to set up occupation zones in the former Bulgarian territories. They stated that all the land they have is now rightfully theirs. Relations with [From.GetName] are greatly damaged, and the only thing that rests us is to cancel our military alliance."
 pact.66.a:0 "This is outrageous!"
 
 pact.67.t:0 "End of the occupation of Bulgaria"
@@ -343,7 +343,7 @@ pact.67.d:0 "The time has come to restore Bulgaria as an independent state. They
 pact.67.a:0 "A new beginning."
 
 pact.68.t:0 "End of the occupation of Bulgaria"
-pact.68.d:0 "The [From.GetAdj] government have contacted us saying they wish to end the occupation of Bulgaria as 'it has been expundged of all wrongdoing'. Bulgaria will be reestablished as a nominal independent state, but under close [From.GetAdj] control. In return for giving them the remaining Bulgarian lands we are promised industrial reparations. Shall we agree with them?"
+pact.68.d:0 "The [From.GetAdjective] government have contacted us saying they wish to end the occupation of Bulgaria as 'it has been expundged of all wrongdoing'. Bulgaria will be reestablished as a nominal independent state, but under close [From.GetAdjective] control. In return for giving them the remaining Bulgarian lands we are promised industrial reparations. Shall we agree with them?"
 pact.68.a:0 "Agree, let this be a new beginning."
 pact.68.b:0 "No, we keep the land for ourselves!"
 
