--- a/Kaiserreich Korean Translation/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 BHC_backwards_economy_1:0 "Underdeveloped Economy"
@@ -67,14 +67,37 @@ BHC_kolhapur_forces:0 "Rebel forces in Kolhapur will appear and fight for our ca
 BHC_union_forces:0 "Two units of infantry and three units of militia will join our army\n"
 
 ### Parties ###
-BHC_totalist_party:0 "극단주의자"
-BHC_radical_socialist_party:0 "농업파"
-BHC_syndicalist_party:0 "중도파"
-BHC_totalist_party_long:0 "바르티야 극단주의자"
-BHC_radical_socialist_party_long:0 "바르티야 농업파"
-BHC_syndicalist_party_long:0 "바르티야 중도파"
-BHC_anarcho_syndicalist_party:0 "아나코 생디칼리스트"
-BHC_anarcho_syndicalist_party_long:0 "바르티야 자기수양 협회"
+BHC_totalist_party:0 "Maximists"
+BHC_radical_socialist_party:0 "Agrarians"
+BHC_syndicalist_party:0 "Moderates"
+BHC_totalist_party_long:0 "Maximist Faction of Bharatiya"
+BHC_radical_socialist_party_long:0 "Agrarian Faction of Bharatiya"
+BHC_syndicalist_party_long:0 "Moderate Faction of Bharatiya"
+BHC_anarcho_syndicalist_party:0 "Anarcho-Syndicalists"
+BHC_anarcho_syndicalist_party_long:0 "Self-Culture Association of Bharatiya"
+BHC_social_democrat_party:0 "Liberals"
+BHC_social_democrat_party_long:0 "Liberals"
+BHC_social_liberal_party:0 "Liberals"
+BHC_social_liberal_party_long:0 "Liberals"
+BHC_market_liberal_party:0 "Unionists"
+BHC_market_liberal_party_long:0 "Unionists"
+BHC_social_conservative_party:0 "Unionists"
+BHC_social_conservative_party_long:0 "Unionists"
+BHC_authoritarian_democrat_party:0 "Princely Sympathisers"
+BHC_authoritarian_democrat_party_long:0 "Princely Sympathisers"
+BHC_paternal_autocrat_party:0 "Princely Sympathisers"
+BHC_paternal_autocrat_party_long:0 "Princely Sympathisers"
+BHC_national_populist_party:0 "Ittehad-ul Muslimeen"
+BHC_national_populist_party_long:0 "Ittehad-ul Muslimeen"
+
+### Leader Descriptions ###
+POLITICS_LALA_LAJPAT_RAI_DESC:0 "Lala Lajpat Rai, Punjabi Hindu philanthropist, returned from championing Indian independence in the United States to formulate the creation of a new socialist state in India. With the collapse of British rule in late 1925, Rai, along with other Indian socialist figureheads, proclaimed the establishment of the People's Republic of Bengal. While the People's Republic initially failed to unite India through force, it managed to consolidate its rule over the northeastern third of the sub-continent. Rai, once relatively secure in him leaderhsip of the People's Republic, renamed the Bharatiya Commune to indicate its ambition of unification, now faces spirited opposition from competing socialist factions. With his advanced age and waning influence, Rai has announced his intent to resign from his post. His successor may well determine the future of the Commune itself."
+POLITICS_FAZLUL_HUQ_DESC:0 "Fazlul Huq, former secretary of the Bengali Muslim League, and now an avowed Syndicalist, has led his 'Moderate' faction to victory in the Indian National Congress's special session. He campaigned on a platform of trade-union centric industrialisation and the gradual implimenation of socialist reform. Despite electoral success, however, Fuq still faces staunch opposition from opposing factions of the Indian National Congress. Regardless, Fuq's vision of prosperity in the historically impoverished eastern India, and perhaps oneday the entire sub-continent, appears, at least to his supporters, to be increasingly achievable."
+POLITICS_CHANDRA_BOSE_DESC:0 "As a boy, Subhas Chandra Bose once assaulted a British schoolmaster for defaming his beloved India; his expulsion thereafter left Bose with an almost rabid desire for vengance. Shortly before the collapse of the British Raj, Bose attracted large swaths of the Indian population to the socialist cause with incendiary speeches against the all who would deny India's people sole dominion over the sub-continent. With the success of Bose's Maximists within the Indian National Congress, the Bharatiya Commune as a whole has begun to assume a similarly militaristic outlook; it now looks to strike a decisive blow to the hearts of the Dominionists and Princely Federation alike."
+POLITICS_MOHANDAS_GHANDI_DESC:0 "A former lawyer, Mohandas Karamchand Gandhi valued highly the gradual, peaceful, and lawful independence of India from British rule. With the collapse of the Raj, however, he and his many followers were forced to reassess their position. Though still a propenent of pacifism, Ghandi has become increasingly influenced by the ideas of his colleagues in the now radicalised Indian National Congress. Ghandi's victory in the Indian National Congress's special session has awoken renewed hope for the peaceful reunification of the Indian sub-continent and the reconciliation of its divided factions."
+POLITICS_JAWAHARLAL_NEHRU_DESC:0 "Jawaharlal Nehru is almost certainly the most tactful of the Bharatiya Commune's prominent political leaders. With the collapse of the British Raj, Nehru, while a staunch advocate for immediate independence from the weakened Empire, worked tireless to mediate all manner of disputes among Indian leaders across the political spectrum. While his detractors would slander Nehru as indecisive and cowardly, Nehru's subtle political maneuvering was essential for his ascension to the highest levels of the Indian National Congress, and now the Bharatiya Commune itself. Under Nehru's leadership, perhaps the factionalism which has plagued the Congress for decades may finally be assauged."
+POLITICS_NIRMAL_KUMAR_BOSE_DESC:0 "Nirmal Kumar Bose, protégé of the famous Mohandas Gandhi, has assumed leadership of the Bharatiya Commune. He is likely to continue the agrarian reforms of Ghandi, and encourage the non-violent reunification of India. Many dissidents within the Bharatiya Commune, however, are displeased with Bose's rise to power, believing, despite official explanations to the contrary, that Bose masterminded Ghandi's demise."
+POLITICS_SHRIPAD_AMRIT_DANGE_DESC:0 "Shripad Amrit Dange is perhaps the most radical syndicalist within the Indian National Congress. Much like Nestor Makhno of the French Anarchistes, he advocates the eventual disestablishment of the very state itself. Unlike the Anarchistes however, rather than promoting rural collectivisation, Dange advocates industrialisation and the assumption by trade unions of the entire economic apparatus."
 
 ### Focuses ###
 BHC_INC_Meeting_1:0 "Special Meeting of the INC"
@@ -173,8 +196,8 @@ BHC_mobility:0 "Mobility Focus"
 BHC_mobility_desc:0 "Cavalry is no longer enough. We must focus on vehicle transport, and increase the mobility of our forces."
 BHC_modernize_army:0 "Modernise the Army"
 BHC_modernize_army_desc:0 "Indian infantrymen are numerous and loyal. Their equipment, however, is dated and inefficient. We must rectify this."
-BHC_artillery:0 "Modernise our Artillery"
-BHC_artillery_desc:0 "The Commune's artillery mostly dates from the Weltkrieg. We must modernise our artillery unless we wish our soldiers to be eviscerated without proper support."
+BHC_artillery_focus:0 "Modernise our Artillery"
+BHC_artillery_focus_desc:0 "The Commune's artillery mostly dates from the Weltkrieg. We must modernise our artillery unless we wish our soldiers to be eviscerated without proper support."
 BHC_armored_corps_1:0 "The Bharatiya Armoured Corps"
 BHC_armored_corps_1_desc:0 "Providing our troops with armoured vehicles will give us a distinct edge in facing off against our enemies."
 BHC_armored_corps_2:0 "Expand the Bharatiya Armoured Corps"
@@ -374,12 +397,12 @@ beng.48.t:0 "Ho Chi Minh is Invited to Calcutta"
 beng.48.d:0 "Comrade Ho Chi Minh, the leader of the Indochinese Syndicalist Party has been invited to Calcutta to form a government in exile aimed at fermenting revolution in our former colony, currently held by the Germans. This could be a easy way to destabilise the German colonial empire."
 beng.48.a:0 "Bon voyage, comrade Ho Chi Minh!"
 beng.48.b:0 "Can't risk the trip, frightfully sorry"
-beng.49.t:0 "[From.GetName] Has Agreed"
-beng.49.d:0 "We have received word from the [From.GetAdjective] government that Ho Chi Minh is on his way to Calcutta and should be here within the month."
-beng.49.a:0 "Excellent news!"
-beng.50.t:0 "[From.GetName] Has Refused"
-beng.50.d:0 "The [From.GetAdjective] government sends word that the trip would be too dangerous for Ho Chi Minh, and they see no benefit to setting up the Indochinese shadow government in Calcutta."
-beng.50.a:0 "What? Outrageous!"
+beng.49.t:0 "[From.GetName] Has Refused"
+beng.49.d:0 "The [From.GetAdjective] government sends word that the trip would be too dangerous for Ho Chi Minh, and they see no benefit to setting up the Indochinese shadow government in Calcutta."
+beng.49.a:0 "What? Outrageous!"
+beng.50.t:0 "[From.GetName] Has Agreed"
+beng.50.d:0 "We have received word from the [From.GetAdjective] government that Ho Chi Minh is on his way to Calcutta and should be here within the month."
+beng.50.a:0 "Excellent news!"
 beng.52.t:0 "Socialists of the North"
 beng.52.d:0 "We've received word from a number of socialist cells in the north that they are ready to move. The best place they can gather in any number is away from the cities, and a site in the mountains of Shimla has been selected. This would give the rebels a chance to open a second front with our enemies...but it comes with the chance the Dominion might discover our plans early and thus put us at a disadvantage. For good or ill, the moment the rebels begin to act, we will be at war."
 beng.52.a:0 "Make the attempt, no matter the risk"
