--- a/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
@@ -1,23 +1,23 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
-BOL_nativetroops:0 "Natives don't join the army"
-BOL_nativetroops_desc:0 "The native peoples of Bolivia don't feel represented by their government, which seems to fail that at every turn. Thus, few join the army. We'd need considerable integration efforts to change this situation"
-BOL_PLOWSHARE:0 "Swords into Plowshares"
-BOL_PLOWSHARE_desc:0 "A great many revolutionary and war veterans now have been given work and renewed purpose"
+BOL_nativetroops:0 "Natives Enlistment Issues"
+BOL_nativetroops_desc:0 "The indigenous people of Bolivia are disillusioned with our government. Thus, few enlist in our armed forces. Whether through force, or through reconciliation, we must adress this issue."
+BOL_PLOWSHARE:0 "Swords Into Plowshares"
+BOL_PLOWSHARE_desc:0 "Our many war veterans and former revolutionaries have been given work and renewed purpose."
 BOL_FARM:0 "Collective Farms"
 BOL_FARM_desc:0 "The landlords who for so long held our nation hostage are defeated, and the people of Bolivia are the masters of the land now, for a better future!"
 BOL_JUST:0 "A Just Society"
-BOL_JUST_desc:0 "For centuries the natives of Bolivia had been essentially been treated as second class citizens by the government. Now that has changed, and our popularity increases every day as the people no longer starve"
+BOL_JUST_desc:0 "For centuries the natives of Bolivia were treated as second class citizens. Now, we have affirmed the humanity of our native populace, and the wounds of history's injustices have begun to heal."
 BOL_PRIVA:0 "Privatisation Disaster"
-BOL_PRIVA_desc:0 "Bolivia faces an unprecedented level of economic chaos as unregulated privatisations turned thousands from middle class to beggars almost overnight"
+BOL_PRIVA_desc:0 "The rapid pace of our privatisation efforts have had disastrous consequences, turning countless former state employees jobless overnight."
 BOL_tankimport:0 "Tank Imports"
-BOL_tankimport_desc:0 "We were the first nation in South America to use tanks in combat, and we still see them as the future. Friends abroad will help us establish the new Bolivian Army"
+BOL_tankimport_desc:0 "Bolivia was the first South American nation to use tanks in combat. With help from our allies aroad, we have begun to accumulate an even greater quantity of armoured vehicles."
 BOL_customs_union:0 "Andean Common Market"
 BOL_customs_union_desc:0 "Bolivia and Peru now share a common market! Only good may come of this"
 
 ### Focuses ###
-BOL_trap:0 "Strategical Long Term Planning"
+BOL_trap:0 "Strategic Long Term Planning"
 BOL_trap_desc:0 "Our country must learn from it's mistakes, both administrative and military, if it is to survive the coming storm"
 BOL_infra_2:0 "Infrastructure Improvements"
 BOL_infra_2_desc:0 "The highest of priorities will be given to making sure Bolivia's infrastructure is in par with it's neighbour's"
@@ -153,7 +153,7 @@ bol.2.t:0 "Unemployment and The Class Division in Bolivia"
 bol.2.d:0 "Since the privatisation of virtually every industry in Bolivia, the middle class has been destroyed and now everyone is either as poor as a native or a member of the mega-rich. There are little to no jobs left in Bolivia, and the jobs that still exist don't provide acceptable wages or benefits."
 bol.2.a:0 "There is nothing we can do"
 bol.3.t:0 "Aftermath of the Platine War"
-bol.3.d:0 "Since her formation Bolivia has not fared well in terms of her foreign policy, suffering hurtful losses. A border conflict with Chile led to the ‘Saltpetre War' (1879 – 1883) which Bolivia lost despite an alliance with Peru, which ended with the nation having to cede the coastal province of Antofagasta, losing its access to the sea. In 1903 Brazil and Bolivia signed the Treaty of P?troplis, ceding the important rubber producing province Acre to Brazil. In 1932, tensions with Paraguay over the Gran Chaco region touched off what would later come to be known as the ‘Great South American War'. Initially, Bolivia was successful against the Paraguayans had quickly overran the country, unfortunately though, the Bolivian occupation of Paraguay prompted Argentinean intervention in 1933, and a in a quick campaign Argentinean troops quickly liberated Paraguay and settled in for the winter.In 1934, Argentina renewed their offensive and scored several great victories against the Bolivian forces, and Bolivia seemed totally defeated. However, in another twist of the war, their hope was rekindled, as Brazil chose this time to intervene on their side. Unfortunately however the Brazilians focused the thrust of their offensives towards the La Plata River, leaving the Bolivians to look to their own defences, and this error of judgement lead to a humiliating final defeat of Bolivia at the hands of Argentina in late 1934. In the resulting peace, Bolivia was forced to accept the independence of Paraguay and relinquish their claims on the Gran Chaco region. After another short campaign by Argentinean forces Brazil was defeated in 1935, and in the resulting peace Uruguay and Paraguay were 'federated' with Argentina to create the Union of La Plata.In 1936 Bolivia stands at a crossroads, on one hand she is burning with a passion for revenge against ‘La Plata', but on the other hand, she is wary of becoming too closely aligned with Brazil. However, with the government in La Plata beginning to assert claims over parts of Bolivia relations are becoming even further strained and closer ties with Brazil may well be unavoidable. Whatever the situation, Bolivia will have to play her cards wisely, for the moment of final decision will come soon…"
+bol.3.d:0 "Since her formation Bolivia has not fared well in terms of her foreign policy, suffering hurtful losses. A border conflict with Chile led to the 'Saltpetre War' (1879 – 1883) which Bolivia lost despite an alliance with Peru, which ended with the nation having to cede the coastal province of Antofagasta, losing its access to the sea. In 1903 Brazil and Bolivia signed the Treaty of P?troplis, ceding the important rubber producing province Acre to Brazil. In 1932, tensions with Paraguay over the Gran Chaco region touched off what would later come to be known as the 'Great South American War'. Initially, Bolivia was successful against the Paraguayans had quickly overran the country, unfortunately though, the Bolivian occupation of Paraguay prompted Argentinean intervention in 1933, and a in a quick campaign Argentinean troops quickly liberated Paraguay and settled in for the winter.In 1934, Argentina renewed their offensive and scored several great victories against the Bolivian forces, and Bolivia seemed totally defeated. However, in another twist of the war, their hope was rekindled, as Brazil chose this time to intervene on their side. Unfortunately however the Brazilians focused the thrust of their offensives towards the La Plata River, leaving the Bolivians to look to their own defences, and this error of judgement lead to a humiliating final defeat of Bolivia at the hands of Argentina in late 1934. In the resulting peace, Bolivia was forced to accept the independence of Paraguay and relinquish their claims on the Gran Chaco region. After another short campaign by Argentinean forces Brazil was defeated in 1935, and in the resulting peace Uruguay and Paraguay were 'federated' with Argentina to create the Union of La Plata.In 1936 Bolivia stands at a crossroads, on one hand she is burning with a passion for revenge against 'La Plata', but on the other hand, she is wary of becoming too closely aligned with Brazil. However, with the government in La Plata beginning to assert claims over parts of Bolivia relations are becoming even further strained and closer ties with Brazil may well be unavoidable. Whatever the situation, Bolivia will have to play her cards wisely, for the moment of final decision will come soon…"
 #"Treaty of P?troplis" what???
 bol.3.a:0 "Those Argentinians will get what's coming for them!"
 bol.4.t:0 "Civil War breaks out in La Paz"
