--- a/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
@@ -1,21 +1,27 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 BRA_major_industrial_strike:0 "Major Industrial Strike"
 BRA_major_industrial_strike_desc:0 "Major strikes nationwide risk our economy and hold the nation for ransom. How will the government react?"
 BRA_state_farms:0 "State Owned Farms"
+BRA_state_farms_desc:0 "The state is now the sole propreitor of much of our nation's farmland."
 BRA_cooperatives:0 "Peasant-Headed Cooperatives and Limited Private Initiative"
-BRA_brazilian_socialism:0 "Brazilian Socialism"
+BRA_cooperatives_desc:0 "Farmland has largely been redistributed to local cooperatives both owned and operated by those who toil on the land. Individuals, however, are still allowed to possess the value that they add to the land."
 BRA_mixed_capital_ventures:0 "Mixed-Capital Ventures"
+BRA_mixed_capital_ventures_desc:0 "We have established various private-public joint ventures to manage select economic sectors."
 BRA_laissez_faire_economy:0 "Laissez-Faire Economy"
+BRA_laissez_faire_economy_desc:0 "Regulation has only burdened our nation. As such, the government has repealed most regulations in favor of unrestricted private enterprise."
 BRA_nationalized_economy:0 "Nationalised Economy"
+BRA_nationalized_economy_desc:0 "Nearly every aspect of our economy is tightly controlled and private ownership is restricted."
 BRA_land_reform:0 "Land Reform Enacted"
+BRA_land_reform_desc:0 "Most Brazilian land was previously owned by a few plutocrats. We have stripped them of their most neglected tracts."
 BRA_beat_arg:0 "Broke La Plata"
+BRA_beat_arg_desc:0 "La Plata, our historic adversary, has been defeated."
 BRA_war_reparations:0 "War Reparations from Argentina"
 BRA_war_reparations_desc:0 "Brazil crushed Argentina and her lackeys in the Great War, and now they will pay for each Brazilian life they stole in both wars. Olho por olho, dente por dente"
 BRA_tight_leash:0 "Tight Leash"
 BRA_tight_leash_desc:0 "Argentina's government now is ran by Brazilian 'advisers', and the nation is a province of Brazil all but in name"
-BRA_bradesco: "Bradesco"
+BRA_bradesco:0 "Bradesco"
 BRA_bradesco_desc:0 "The Bradesco bank has been recently expanding, and under its founder Amador Aguiar it's fast becoming a pillar of our financial system"
 BRA_faith_unity:0 "Unity Through Faith"
 BRA_faith_unity_desc:0 "For too long Brazilians have been divided by the illusions of this foul, decrepit republic. Democracy, Syndicalism and other liberal drivel have made the people weak and libertine. Such disease will be healed by our faith in ourselves and each other"
@@ -117,7 +123,7 @@ BRA_support_desc:0 "An army is made of more than guns and uniforms. Medics, engi
 BRA_army_railways:0 "Army Railways"
 BRA_army_railways_desc:0 "One way to increase our mobilisation speed to aggression from beyond the River Plate is to set up networks of railways that will only be used by the armed forces, or transport resources vital to these. Naturally, the populace will understand that it's for the greater good of the nation"
 BRA_amphibious:0 "Amphibious Operations: War Plan Ciano"
-BRA_amphibious_desc: "La Plata knows we are coming, and no doubt has increased defences at the border and in a direct path to Buenos Aires. In order to ensure any offensive operations in, the River Plate are swift, we will need to establish especial corps that can set up a beachhead for the rest of the army"
+BRA_amphibious_desc:0 "La Plata knows we are coming, and no doubt has increased defences at the border and in a direct path to Buenos Aires. In order to ensure any offensive operations in, the River Plate are swift, we will need to establish especial corps that can set up a beachhead for the rest of the army"
 BRA_jungle_army:0 "Atlantic Jungle Training"
 BRA_jungle_army_desc:0 "The vast jungle that runs through most of our coastline has massive military implications. Its mountainous terrain is too rugged and forested for usual land combat to occur. We must train special units to properly garrison and for effective counter operations if need be"
 BRA_rubber_army:0 "The Rubber Army"
@@ -203,13 +209,13 @@ BRA_father_of_the_poor_desc:0 "Getúlio won the civil war, for Brazilians know w
 BRA_new_state:0 "Estado Novo"
 BRA_new_state_desc:0 "A New State has cemented itself as a protector and guardian of Brazil. All are expected to fulfil their duty, and Brazil shall emerge stronger than ever from these troubled times!"
 BRA_democracy:0 "Democracy Maintained"
-BRA_democracy_desc:0 "The republic stood on the edge of a knife, and yet it survived! Truly fate was on our side.
+BRA_democracy_desc:0 "The republic stood on the edge of a knife, and yet it survived! Truly fate was on our side."
 BRA_national_guard:0 "Establish a new National Guard!"
 BRA_national_guard_desc:0 "The coup attempts and civil unrest make it clear that words alone will not keep the republic safe. Establishing and maintaining a national guard will be mostly symbolic, but will be a useful way to incorporate militia members into our order of battle"
 BRA_rule_of_law:0 "Rule of Law Prevails"
 BRA_rule_of_law_desc:0 "Yes, these are uncertain times. But those who forfeit their liberty for safety deserve neither. Persecution is not about what the Republic we fought for is about!"
 BRA_purge_dem:0 "Purge the Extremists"
-BRA_purge_dem_desc:0 "We must safeguard the republic against those who dream day and night of seeing it fall still
+BRA_purge_dem_desc:0 "We must safeguard the republic against those who dream day and night of seeing it fall still"
 BRA_intelectual_amnesty:0 "Intellectual Amnesty"
 BRA_intelectual_amnesty_desc:0 "Many intellectuals have extremist ideological views. It would be foolish to simply drive them away, when they can be useful to us."
 BRA_new_constitution:0 "New Constitution"
@@ -249,7 +255,7 @@ BRA_free_per_desc:0 "Peru is still under counterrevolutionary control. Crossing 
 BRA_internacionalism:0 "International Revolution"
 BRA_internacionalism_desc:0 "With our continent free, the time is ripe for us to join the struggle in Europe, Africa and beyond. The Weltkrieg has gained a new player... and one which cannot be broken, for the workers of America are united behind us!"
 BRA_a_loyal_navy:0 "A Loyal Navy"
-BRA_a_loyal_navy:0 "The navy is filled to its core with integralist sympathisers. If Democracy is to survive, they must be removed from anywhere they can damage it."
+BRA_a_loyal_navy_desc:0 "The navy is filled to its core with integralist sympathisers. If Democracy is to survive, they must be removed from anywhere they can damage it."
 
 ### Parties ###
 BRA_social_democrat_party:0 "PSD"
@@ -385,7 +391,7 @@ bra.19.a:0 "Just ignore them!"
 bra.20.t:0 "The Unsellable Coffee"
 bra.20.d:0 "The landed oligarchs of São Paulo have presented us with an issue. With coffee prices falling day by day on the international markets, these farmers are filling their warehouses with more and more unsellable harvests. According to our economists, if we don't act now, the deepening agricultural crisis will end up affecting not only the grand farmers, but also the poorer peasants that have just been benefited through our programmes."
 bra.20.a:0 "Didn't they always believe in 'free market'? Ignore them!"
-bra.20.b:0 "Buy the surplus coffee and BURN it. That will raise its price!" #No money in game, what to replace it with?"
+bra.20.b:0 "Buy the surplus coffee and BURN it. That will raise its price!" #No money in game, what to replace it with?
 bra.21.t:0 "Burn, coffee, burn!"
 bra.21.d:0 "All across the southern states, giant bonfires are burning thousands of sacks of coffee. According to our economists, this will reduce the offer of Brazilian coffee worldwide, which will in turn raise its price on the international markets. Even if we have spent some money on this, but this investment will return to us in the form of taxes eventually."
 bra.21.a:0 "Now let's toast with a cup of strong black coffee!"
@@ -481,7 +487,7 @@ bra.43.t:0 "Intervene on private companies?"
 bra.43.d:0 "With a great deal of private companies going bankrupt, unemployment is rising in Brazil. We should be assuming control of these enterprises before their bad handling harm our economy even more! Or we could at least promote some public-private partnerships and mixed-capital ventures, if we fear too much interventionism."
 bra.43.a:0 "If they can't do anything right, we should buy everything."
 bra.43.b:0 "The state needs just SOME control - Promote some mixed-capital ventures."
-bra.44.c:0 "NATIONALISATION IS SOCIALISM. Got it? Stay out of it!"
+bra.43.c:0 "NATIONALISATION IS SOCIALISM. Got it? Stay out of it!"
 bra.44.t:0 "Dealing with the Trade Unions"
 bra.44.d:0 "Most trade unions in Brazil are organised into the CBT and BOC syndicates. Behind their facade of fighting to improve workers' rights and wages, they are really an organisation of undemocratic socialists who would take the first opportunity to topple our government and establish their dictatorship. As most of our workers are members of these unions, however, any move against them would be capable of triggering major unrest. What should we do?"
 bra.44.a:0 "Infiltrate our security agents on the unions."
