12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Colombia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Colombia_l_english.yml
@@ -1,16 +1,16 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 COL_coffee:0 "Coffee Boom"
 COL_coffee_desc:0 "Our farms are producing quality coffee at an increased rate"
-COL_coffee_trade:0 "Coffee Exports
+COL_coffee_trade:0 "Coffee Exports"
 COL_coffee_trade_desc:0 "Coffee is now our prime export commodity, and the turmoil in Brazil resulted in a de facto monopoly which is ours to enjoy"
 COL_bogotazo:0 "Political Violence"
 COL_bogotazo_desc:0 "Violence between Liberals, Conservatives, Syndicalists and Leopardos erupted in a swift yet brutal manner in Bogotá. Now our party has nearly absolute control of Colombian politics"
-COL_status_quo: "Status Quo upheld"
+COL_status_quo:0 "Status Quo upheld"
 COL_status_quo_desc:0 "Colombia has always been a good place for good people to live. Isn't that why we love our country? Let us cherish our prosperity, and think of the future instead of ill for our brothers"
 COL_arms_deathroad:0 "Military Imports from Canada"
-COL_arms_deathroad:0 "We are importing large amounts of supplies from Canada and other Entente nations"
+COL_arms_deathroad_desc:0 "We are importing large amounts of supplies from Canada and other Entente nations"
 COL_tradeagreements:0 "Favourable Trade Agreements"
 COL_tradeagreements_desc:0 "Taking advantage of our growth and stability, we have managed to leverage better trade deals with our neighbours and the Great Powers"
 COL_stable_dem:0 "A Stable Democracy"
@@ -40,7 +40,6 @@ COL_assuming_direct_control_desc:0 "All semblance of legality has been dropped f
 colombia_gran_alliance:0 "Andean Pact"
 COL_emergency:0 "State of Emergency"
 COL_leopardos:0 "Leopardo Government"
-COL_38:0 "The Elections of 1938 have happened"
 COL_liberal:0 "Liberal Government"
 COL_conservative:0 "Conservador Government"
 COL_unir:0 "UNIR Coalition Government"
@@ -108,7 +107,7 @@ COL_ports_airports:0 "Ports & Airports"
 COL_ports_airports_desc:0 "Ports and Airports are the key to ensure our exported goods can reach foreign markets in greater numbers"
 COL_infrastructure2:0 "Extensive Infrastructure Efforts"
 COL_infrastructure2_desc:0 "If our armies are to be well supplied, we should reform our infrastructure from the ground up to ensure all necessary items arrive at the barracks"
-COL_academical_reforms:0 "Academical Reforms"
+COL_academical_reforms:0 "Academic Reforms"
 COL_academical_reforms_desc:0 "Our Universities are rich and our scientists bright, but they do not produce much that can be used for more... practical concerns of the state. Some small monetary incentives might make these minds see it our way"
 COL_eletronics_effort:0 "Electronic Studies"
 COL_eletronics_effort_desc:0 "Electronics, as a science, is in it's infancy, and yet our universities have a few professors who are up to date in it's developments. We must ensure the people of Colombia have such technologies at their disposal"
@@ -120,11 +119,11 @@ COL_coffee_boom:0 "Coffee Boom"
 COL_coffee_boom_desc:0 "With the current chaos in Brazil, one nation rules the coffee market alone and supreme: Colombia. Let us take steps to ensure such wealth reaches state coffers..."
 COL_coffee_expand:0 "Coffee Exports"
 COL_coffee_expand_desc:0 "The demand for coffee is as high as it ever us, in such nervous times, everyone should should drink some coffee, correct? Anyways, our exports are expanding at rapid pace, and our economy is benefiting from it"
-COL_import_industrialization_program:0 "Start Import Industrialisation Program"
+COL_import_industrialization_program:0 "Start Import Industrialisation"
 COL_import_industrialization_program_desc:0 "Import substitution industrialisation is a trade and economic policy which advocates replacing foreign imports with domestic production.It is based on the premise that a country should attempt to reduce its foreign dependency through the local production of industrialised products"
-COL_import_industrialization_program_phase_2:0 "Continue Import Industrialisation Program"
+COL_import_industrialization_program_phase_2:0 "Continue Import Industrialisation"
 COL_import_industrialization_program_phase_2_desc:0 "Our import substitution program is still in it's infancy, so let us kick start it in a more organised fashion to ensure our competitiveness"
-COL_import_industrialization_program_phase_final:0 "Finish Import Industrialisation Program"
+COL_import_industrialization_program_phase_final:0 "Finish Import Industrialisation"
 COL_import_industrialization_program_phase_final_desc:0 "Now, the global economy might not be in it's peak, but our program will finish soon, and time will tell if it was successful or not. Truth is, we might return to such efforts in less.. interesting times"
 COL_protecionism:0 "Economic Protectionism"
 COL_protecionism_desc:0 "Our industry is not competitive right now to enter the global market, we must protect it while at the same time invest in modernising it"
@@ -352,8 +351,8 @@ col.6.t:0 "Ecuador folds"
 col.6.d:0 "Rather than allow thousands of brothers to die in the battlefield, Ecuador has joined us peacefully"
 col.6.a:0 "As planned"
 col.7.t:0 "Ecuador refuses!"
-col.7.t:0 "Utter lunacy seems to have taken a grip of the Quito government, for they now are taking arms against us, considering our generous offer a threat"
-col.7.t:0 "They choose... poorly"
+col.7.d:0 "Utter lunacy seems to have taken a grip of the Quito government, for they now are taking arms against us, considering our generous offer a threat"
+col.7.a:0 "They choose... poorly"
 col.8.t:0 "Colombian Ultimatum!?"
 col.8.d:0 "The government of 'Gran' Colombia has issued an Ultimatum! They demand we join the Gran Colombian federation, or be declared imperialists and enemies of the state. What should we do?"
 col.8.a:0 "We have no choice, their armies are too vast. For the good of the people, we surrender"
@@ -362,8 +361,8 @@ col.9.t:0 "Venezuela folds"
 col.9.d:0 "Rather than allow thousands of brothers to die in the battlefield, Venezuela has joined us peacefully"
 col.9.a:0 "As planned"
 col.10.t:0 "Venezuela refuses!"
-col.10.t:0 "Utter lunacy seems to have taken a grip of the Caracas government, for they now are taking arms against us, considering our generous offer a threat"
-col.10.t:0 "They must be drinking oil! To Arms!"
+col.10.d:0 "Utter lunacy seems to have taken a grip of the Caracas government, for they now are taking arms against us, considering our generous offer a threat"
+col.10.a:0 "They must be drinking oil! To Arms!"
 col.11.t:0 "Colombian Ultimatum!?"
 col.11.d:0 "The government of 'Gran' Colombia has issued an Ultimatum! They demand that Panamá joins the Gran Colombia, else a state of war between our countries will begin. What should we do?"
 col.11.a:0 "We have no choice, their armies are too vast. For the good of the people, we surrender"
@@ -380,7 +379,7 @@ col.14.a:0 "All are welcome in this government for all Colombians"
 col.14.b:0 "The people love us, not the Liberales. They can enjoy the sidelines!"
 col.15.t:0 "The Final Blow"
 col.15.d:0 "Colombian democracy is dead. The streets are silent, no more fighting, discussions or debates. Only the sound of marching in the distance, and the Leopardo salute. We finally can get rid of the old constitution and formalise our Junta as... permanent"
-col.15.a:0 "The Colombian Republic will be re-organised into the Greater Colombian Authority, ensuring stability and peace"
+col.15.a:0 "Colombia will be reorganised into the Greater Colombian Authority"
 col.15.b:0 "Such drastic measures may alarm the people"
 col.16.t:0 "Colombia proposes an alliance"
 col.16.d:0 "The Colombians have sent us an offer to ally with them. How we should respond?"
