--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Opinion Modifiers ###
 
@@ -20,7 +20,6 @@ FRA_cancel_first_inter3:0 "첫번째 인터네셔널 회의가 취소되다"
 FRA_cancel_first_inter4:0 "첫번째 인터네셔널 회의가 취소되다"
 FRA_not_going_first_inter:0 "인터네셔널 회의에 가지 않는다."
 FRA_overthrow_bourgeoisie:0 "취소된 세계 혁명"
-FRA_help_cnt:0 "CNT를 지원한다."
 FRA_support_csa:0 "CSA를 지원한다"
 FRA_support_sri:0 "이탈리아 사회주의 공화국을 지원한다."
 FRA_support_sri2:0 "이탈리아 사회주의 공화국을 지원한다."
@@ -213,6 +212,19 @@ FRA_jacobins:0 "자코뱅"
 FRA_parti_communiste:0 "PCF"
 FRA_parti_communiste_long:0 "프랑스 공산주의 정당"
 
+### Leader Descriptions ###
+POLITICS_SEBASTIEN_FAURE_DESC:0 "Sébastien Faure is the first Anarchiste to serve as Chairman of the Bourse Générale du Travail. Originally empowered to chairman in a compromise between the Travailleurs and Anarchistes, factionalism has grown considerably during his time in office, and the apparatus of the state has weakened. If any faction manages to gain a clear majority in the Comité de Salut Public and the Bourse Générale du Travail, Faure is likely to be ousted."
+POLITICS_LEON_JOUHAUX_DESC:0 "Léon Jouhaux has been elected Chairman of the Bourse Générale du Travail. Jouhaux, as a revolutionary trade unionist, participated in the general strike of 1919 which precipitated the Commune's establishment. He is an adherent of orthodox French syndicalism, a true centrist among the factions of the Commune."
+POLITICS_BENOIT_FRACHON_DESC:0 "Benoît Frachon, a veteran of the French Civil War, has become chairman of the Bourse Générale du Travail. While a Syndicalist, he is sympathetic towards the opposing anarchiste faction; to that end, he has declared mending the Commune's factionalism the chief goal of his chairmanship."
+POLITICS_GAMELIN_DESC:0 "General Maurice Gamelin has overthrown the Jacobin regime of Marcel Déat. While his coup is an obvious affront to the already dubious Communard democratic process, many now regard Gamelin as the savior of the Commune, and even syndicalism itself."
+POLITICS_MARCEL_CACHIN_DESC:0 "Marcel Cachin, former diplomat and bureau chief of the state-owned newspaper, Humanité, has become chairman of the Commune of France. While a Leninist, his diplomatic attitude and general charisma, allow him to retain some degree cordialility with syndicalists and anarchists."
+POLITICS_GEORGES_VALOIS_DESC:0 "Georges Valois, an adherent to the national-syndicalist teachings of Georges Sorel, has become chairman of the Bourse Générale du Travail. Valois advocates the unification of the chairmanships of the Bourse Générale du Travail and Comité de Salut Public, a precursor in the eyes of many Communards, to tyranny."
+POLITICS_NESTOR_MAKHNO_DESC:0 "Nestor Makhno, Ukrainian anarchist, fled his homeland for France following German intervention in the Russian Civil War. Now, his firebrand denouncement of any and all state-authority has secured his French electoral victory. His radical vision of a nation, and perhaps world, without government of any kind, will likely not come to fruition in the forseeable future, but his support for decentralisation could forever transform the Commune."
+POLITICS_JACQUES_DORIOT_DESC:0 "Jacques Doriot, veteran of the Weltkrieg, returned from captivity in Germany to find a France forever changed. His personal transformation from moderate socialist, to Leninist, and now national-syndicalist, has instilled in him an engrained proclivity for compromise."
+POLITICS_VINCENT_AURIOL_DESC:0 "Vincent Auriol, long accused by hardline syndicalists of harboring sympathies for the bourgeoisie, has become chairman of the Bourse Générale du Travail. He advocates the gradual transition to a more democratic system of government in the Commune."
+POLITICS_DANIEL_GUERIN_DESC:0 "Daniel Guérin has now not only usurped from the charismatic Nestor Makhno leadership of the Anarchiste faction of the French Commune, but also won the chairmanship itself. Guérin is an academic, and a moderate in comparison to Makhno, who has proven to be a capable lawmaker."
+POLITICS_MARCEL_DEAT_DESC:0 "Marcel Déat has upended the Communard political system. A Leninist who has frequently made public his contempt for syndicalism, Déat stands in opposition to much of France's political establishment. His many enemies both within and outside France could lead to his, and perhaps also the Commune's, downfall. "
+
 ### Flags/Misc ###
 
 ECO_SORE:0 "소렐주의 경제 정책"
@@ -382,6 +394,8 @@ FRA_Demand_Romandy:0 "로잔 요구"
 FRA_Demand_Romandy_desc:0 "스위스의 혁명가들에 대한 부조리는 이제 사라질 것입니다! 스위스는 로망디 지역을 내놓던지 우리와 전쟁을 하던지를 선택해야 해야죠. 어떤 사람도 프랑스 형제들을 박해하거나 사냥하는 뻔뻔한 짓을 하지 못하고 만약 그런 생각이 있다면 지금 당장 치워야 할겁니다. 그리고 스위스는 그런 실수를 했습니다."
 FRA_Demand_Alsace_Lorraine:0 "알자스-로렌 요구"
 FRA_Demand_Alsace_Lorraine_desc:0 "이제 프랑스 인민들은 더 이상 좌시하지 않을 것입니다! 마침내 독일은 알자스-로렌을 돌려주던지 아니면 최종적인 반동분자의 귀결에 직면해야 할 겁니다! 그들이 만약 거부한다면, 우리는 배들린을 향하여 진격함으로써, 그들을 전쟁의 야만성과 공포에 끌고 갈 것입니다! 우리는 우리의 타락한 형제들에게 복수 할 것입니다!"
+FRA_war_with_spain:0 "스페인 독립"
+FRA_war_with_spain_desc:0 "Right at our southern border, just across the Pyrenees, lays the reactionary state of Spain. Despite our best hopes, our brothers from the CNT-FAI did not succeed in their attempt to overthrow the monarchy and are now being persecuted. However, we will suceed. Soon, the Commune will liberate the Spanish workers and secure Iberia."																																																																																								   
 FRA_War_with_germany:0 "독일을 무너뜨리다"
 FRA_War_with_germany_desc:0 "Much to our surprise, the German reactionaries have ceded Alsace-Lorraine. But we never intended to just stop there! The Revolution shall prevail, our brothers will be avenged for what they have been put through in the Weltkrieg! They will just wish they had lost the first war, for we will stop at nothing until they are utterly destroyed!"
 FRA_War_with_austria:0 "오스트리아 - 헝가리의 해방"
