12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -1,14 +1,14 @@
-﻿l_english:
+l_english:
 
 ### Companies ###
 
 ### Generic Companies ###
-generic_arms_company:0 "범용 총기 제조사"
-generic_tank_company:0 "범용 전차 제조사"
-generic_fighter_company:0 "범용 항공기 제조사"
-generic_artillery_company:0 "범용 대포 제조사"
-generic_industrial_company:0 "범용 산업 회사"
-generic_naval_company:0 "범용 선박 제조사"
+generic_arms_company:0 "일반 총기 제조사"
+generic_tank_company:0 "일반 전차 제조사"
+generic_fighter_company:0 "일반 항공기 제조사"
+generic_artillery_company:0 "일반 대포 제조사"
+generic_industrial_company:0 "일반 산업 회사"
+generic_naval_company:0 "일반 선박 제조사"
 
 ### American Union State ###
 mc_wane:0 "맥웨인"
@@ -205,7 +205,7 @@ disa:0 "Dansk Industri Syndikat"
 forenede_automobilfabriker:0 "De Forenede Automobilfabriker"
 frichs_maskinfabrik:0 "Frichs Maskinfabrik"
 skandinavisk_aero:0 "Skandinavisk Aero Industri"
-denmark_sas_company:0 "스칸디나비아 에어라인"
+denmark_sas_company:0 "Scandinavian Airlines"
 odense_staalskibsverft:0 "Odense Staalskibsværft"
 burmeister_wain:0 "Burmeister & Wain"
 aalborg_verft:0 "Aalborg Værft"
@@ -224,10 +224,9 @@ ethiopian_electric_power:0 "Ethiopian Electric Power Corporation"
 university_college_addis_ababa:0 "University College of Addis Ababa"
 addis_ababa_arsenal:0 "Addis Ababa Arsenal"
 eth_state_artillery_factory:0 "State Artillery Factory"
-ethiopia_railway_company:0 "에티오피아 황실 철도 회사"
+ethiopia_railway_company:0 "Imperial Railway Company of Ethiopia"
 addis_ababa_aircraft:0 "Addis Ababa Aircraft Workshop"
 massawa_naval_yard:0 "Massawa Naval Yard"
-mogadishu_naval_yard:0 "Mogadishu Naval Yard"
 
 ### Fengtian ###
 mantetsu_industrial_subsiduaries:0 "Mantetsu Industrial Subsiduaries"
@@ -298,69 +297,69 @@ ungarische_flugzeugfabrik:0 "Ungarische Flugzeugfabrik A.G."
 danubian_aircraft_company:0 "Danubian Aircraft Company"
 
 ### Ireland ###
-goulding_chemicals:0 "굴딩 화학"
-murphy_radio:0 "머피"
-mcmullan_bros:0 "맥멀런 브라더스 유한회사"
-james_mackie_sons:0 "제임스 매키 & 선스"
-o_gorman:0 "오고먼 유한회사"
-aer_lingus:0 "에어 링구스"
-harland_wolff:0 "할랜드 & 울프"
-workman_clark_company:0 "워크맨, 클라크 앤드 컴퍼니"
-john_rigby:0 "존 릭비 & 컴퍼니"
+goulding_chemicals:0 "Goulding Chemicals"
+murphy_radio:0 "Murphy"
+mcmullan_bros:0 "McMullan Bros. Ltd."
+james_mackie_sons:0 "James Mackie & Sons"
+o_gorman:0 "O'Gorman Ltd."
+aer_lingus:0 "Aer Lingus"
+harland_wolff:0 "Harland & Wolff"
+workman_clark_company:0 "Workman, Clark and Company"
+john_rigby:0 "John Rigby & Company"
 
 ### Italy ###
-danieli:0 "다니엘리"
-ducati:0 "두카티"
+danieli:0 "Danieli"
+ducati:0 "Ducati"
 agip:0 "AGIP"
-beretta:0 "베레타"
-fabbrica_nazionale_brescia:0 "브레시아 국립 무기공장"
-metallurgica_bresciana:0 "브레시아 야금"
-lancia:0 "란치아"
-maserati:0 "마세라티"
-isotta_fraschini:0 "이소타 프라스키니"
-ansaldo:0 "안살도"
-fiat:0 "피아트"
-alfa_romeo:0 "알파-로메오"
-reggiane:0 "레지아네"
-fiat_aviazione:0 "피아트 항공"
-fratelli_nardi:0 "프라텔리 나르디"
-caproni:0 "카프로니"
-savoia_marchetti:0 "사보이아마르케티"
+beretta:0 "Beretta"
+fabbrica_nazionale_brescia:0 "Fabbrica Nazionale d'Armi di Brescia"
+metallurgica_bresciana:0 "Metallurgica Bresciana"
+lancia:0 "Lancia"
+maserati:0 "Maserati"
+isotta_fraschini:0 "Isotta Fraschini"
+ansaldo:0 "Ansaldo"
+fiat:0 "Fiat"
+alfa_romeo:0 "Alfa-Romeo"
+reggiane:0 "Reggiane"
+fiat_aviazione:0 "Fiat Aviazione"
+fratelli_nardi:0 "Fratelli Nardi"
+caproni:0 "Caproni"
+savoia_marchetti:0 "Savoia-Marchetti"
 saiman:0 "SAIMAN"
 crda:0 "CRDA"
-cantiere_ansaldo:0 "안살도 조선소"
+cantiere_ansaldo:0 "Cantiere Ansaldo"
 oto:0 "OTO"
 
 ### Japan ###
-Nippon_Electric_Company:0 "일본 전기 회사"
-Ishikawajima_Heavy_Industries:0 "이시카와지마 중공업"
-Mitsui_Zaibatsu:0 "미쓰이 재벌"
-Furukawa_Siemens:0 "후루카와 지멘스"
-Nihon_Musen:0 "일본 무선"
-Nippon_Oil:0 "일본 원유"
-kawasaki:0 "가와사키"
-sumitomo:0 "스미토모"
-tokyo_shibaura_denki:0 "도쿄 시바우라 전기"
-nichitsu:0 "니치쓰"
-kokura_arsenal:0 "고쿠라 조병창"
-nagoya_arsenal:0 "나고야 조병창"
-osaka_army_arsenal:0 "오사카 군 조병창"
-isuzu:0 "이스즈"
-toyota:0 "도요타"
-hitachi:0 "히타치"
-nissan:0 "닛산"
-tokyo_gas:0 "도쿄 기름 & 전기"
-mitsubishi:0 "미쓰비시"
-kyushu_hikoki:0 "규슈 항공기"
-aichi:0 "아이치"
-tachikawa:0 "다치카와"
-nakajima:0 "나카지마"
-yokosuka:0 "요코스카"
-kawanishi:0 "가와니시"
-yokosuka_naval_arsenal:0 "요코스카 해군 공창"
-kure_naval_arsenal:0 "구레 해군 공창"
-sasebo_naval_arsenal:0 "사세보 해군 공창"
-maizuru_naval_arsenal:0 "마이즈루 해군 공창"
+Nippon_Electric_Company:0 "Nippon Electric Company"
+Ishikawajima_Heavy_Industries:0 "Ishikawajima Heavy Industries"
+Mitsui_Zaibatsu:0 "Mitsui Zaibatsu"
+Furukawa_Siemens:0 "Furukawa Siemens"
+Nihon_Musen:0 "Nihon Musen"
+Nippon_Oil:0 "Nippon Oil"
+kawasaki:0 "Kawasaki"
+sumitomo:0 "Sumitomo"
+tokyo_shibaura_denki:0 "Tokyo Shibaura Denki"
+nichitsu:0 "Nichitsu"
+kokura_arsenal:0 "Kokura Arsenal"
+nagoya_arsenal:0 "Nagoya Arsenal"
+osaka_army_arsenal:0 "Osaka Army Arsenal"
+isuzu:0 "Isuzu"
+toyota:0 "Toyota"
+hitachi:0 "Hitachi"
+nissan:0 "Nissan"
+tokyo_gas:0 "Tokyo Gas & Electric"
+mitsubishi:0 "Mitsubishi"
+kyushu_hikoki:0 "Kyushu Hikoki"
+aichi:0 "Aichi"
+tachikawa:0 "Tachikawa"
+nakajima:0 "Nakajima"
+yokosuka:0 "Yokosuka"
+kawanishi:0 "Kawanishi"
+yokosuka_naval_arsenal:0 "Yokosuka Naval Arsenal"
+kure_naval_arsenal:0 "Kure Naval Arsenal"
+sasebo_naval_arsenal:0 "Sasebo Naval Arsenal"
+maizuru_naval_arsenal:0 "Maizuru Naval Arsenal"
 
 ### La Plata ###
 somisa:0 "SOMISA"
@@ -848,6 +847,7 @@ kr_antonov:0 "KB Antonova"
 anatra:0 "Anatra"
 kr_beriev:0 "ChARZ"
 black_sea_shipyard:0 "Lazarevskoe Admiralteystvo"
+ukr_kbp:0 "KBP"
 
 ### United Kingdom ###
 UK_imperial_chemical_industries:0 "International Chemical Industries"
@@ -937,11 +937,12 @@ new_york_shipbuilding:0 "New York Shipbuilding Corporation"
 kr_electric_boat:0 "Electric Boat"
 
 ### White Ruthenia ###
-belarrusian_state_university:0 "Belarrusian State University"
+white_ruthenia_state_university:0 "White Ruthenia State University"
 gomel_radio_plant:0 "Gomel Radio Plant"
 minsk_automobile_plant:0 "Minsk Automotive Factory"
 baranovichi_aviation_repair_plant:0 "Baranovichi Aviation Repair Plant"
-erhard_martens:0 "Erhard Märtens"
+pinsk_shipyard:0 "Pinsk Shipyard"
+bsvt:0 "Belspetsvneshtechnika"
 
 ### Albania ###
 telekomi_shqiptar:0 "Telekomi Shqiptar"
@@ -965,7 +966,8 @@ rumpler_flugzeugwerke_china:0 "Rumpler Flugzeugwerke China"
 kaiserliche_werft_guangzhou:0 "Kaiserliche Werft Guangzhou"
 
 ### Germany ###
-krupp:0 "Krupp"
+krupp:0 "Krupp AG"
+krupp2:0 "Krupp AG Monopol"
 vereinigte_stahlwerke:0 "Vereinigte Stahlwerke AG"
 aeg:0 "AEG"
 braun_company:0 "Braun"
@@ -1000,9 +1002,10 @@ siemens_schuckert:0 "Siemens-Schuckert"
 arado:0 "Arado"
 blohm_voss:0 "Blohm und Voss"
 germaniawerft:0 "Germaniawerft"
-Kaiserliche_werft_wilhelmshaven:0 "Kaiserliche Werft Wilhelmshaven"
+kaiserliche_werft_wilhelmshaven:0 "Wilhelmshavenwerft"
 schichau_werke:0 "Schichau-Werke"
 vulcan_stettin:0 "AG Vulcan Stettin"
+siemens_schuckert2:0 "Siemens-Schukert Verbessert"
 
 ### Flanders-Wallonia ###
 cockerill:0 "Cockerill"
@@ -1027,7 +1030,6 @@ cockerill_scheepwerfen:0 "Cockerill Scheepwerfen"
 
 ### Flanders-Wallonia ###
 cockerill:0 "Cockerill"
-                                                                
 societe_belge_radio:0 "Société Belge Radio-électrique"
 solvay:0 "Solvay"
 fabrique_nationale:0 "Fabrique Nationale"
@@ -1039,19 +1041,8 @@ la_brugeoise:0 "La Brugeoise"
 renard:0 "Renard"
 avions_fairey:0 "Avions Fairey"
 sabca:0 "SABCA"
-
-                
-                     
-                     
 stampe_vertongen:0 "Stampe et Vertongen"
 boel_zonen:0 "J. Boel & Zonen"
-                   
-                       
-                                                
-                       
-                     
-                                                     
-                                 
 
 ### Serbia ###
 sartid:0 "SARTID"
