--- a/Kaiserreich Korean Translation/localisation/KR_Confederation_Great_Lakes_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Confederation_Great_Lakes_l_english.yml
@@ -1,23 +1,23 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
-CGL_totalist_party:0 "ACP"
-CGL_totalist_party_long:0 "미 공산당"
-CGL_radical_socialist_party:0 "CSA"
+CGL_totalist_party:0 "아메리카 공산당"
+CGL_totalist_party_long:0 "아메리카 공산당"
+CGL_radical_socialist_party:0 "아메리카 노동 연맹"
 CGL_radical_socialist_party_long:0 "아메리카 노동 연맹"
-CGL_syndicalist_party:0 "CSA"
+CGL_syndicalist_party:0 "아메리카 노동 연맹"
 CGL_syndicalist_party_long:0 "아메리카 노동 연맹"
-CGL_social_democrat_party:0 "PA"
+CGL_social_democrat_party:0 "진보 연합"
 CGL_social_democrat_party_long:0 "진보 연합"
-CGL_social_liberal_party:0 "민주"
+CGL_social_liberal_party:0 "민주당"
 CGL_social_liberal_party_long:0 "민주당"
-CGL_market_liberal_party:0 "공화"
+CGL_market_liberal_party:0 "공화당"
 CGL_market_liberal_party_long:0 "공화당"
-CGL_social_conservative_party:0 "입헌"
+CGL_social_conservative_party:0 "입헌주의"
 CGL_social_conservative_party_long:0 "입헌당"
-CGL_authoritarian_democrat_party:0 "MJ"
+CGL_authoritarian_democrat_party:0 "군사평의회"
 CGL_authoritarian_democrat_party_long:0 "군사평의회"
-CGL_paternal_autocrat_party:0 "MJ"
+CGL_paternal_autocrat_party:0 "군사평의회"
 CGL_paternal_autocrat_party_long:0 "군사평의회"
-CGL_national_populist_party:0 "AFP"
+CGL_national_populist_party:0 "아메리카 우선당"
 CGL_national_populist_party_long:0 "아메리카 우선당"
