12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
@@ -1,9 +1,9 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 DEH_totalist_party:0 "Maximists"
 DEH_radical_socialist_party:0 "Socialists"
-DEH_syndicalist_party:0 "Agrarians"
+DEH_syndicalist_party:0 "Syndicalists"
 DEH_social_democrat_party:0 "IHRP"
 DEH_social_liberal_party:0 "Swaraj"
 DEH_market_liberal_party:0 "Liberals"
@@ -13,7 +13,7 @@ DEH_paternal_autocrat_party:0 "Princely Sympathisers"
 DEH_national_populist_party:0 "Imperial Sympathisers"
 DEH_totalist_party_long:0 "Maximist Party of India"
 DEH_radical_socialist_party_long:0 "Socialist Party of India"
-DEH_syndicalist_party_long:0 "Agrarian Party"
+DEH_syndicalist_party_long:0 "Syndicalist Party"
 DEH_social_democrat_party_long:0 "All-India Home Rule Party"
 DEH_social_liberal_party_long:0 "Swaraj Party"
 DEH_market_liberal_party_long:0 "Indian Liberal Party"
@@ -21,6 +21,9 @@ DEH_social_conservative_party_long:0 "Unionist Party"
 DEH_authoritarian_democrat_party_long:0 "Council of Princes"
 DEH_paternal_autocrat_party_long:0 "Princely Sympathisers"
 DEH_national_populist_party_long:0 "Imperial Sympathisers"
+
+### Leader Descriptions ###
+POLITICS_GEORGE_FIFTH_DESC:0 "The years since the Weltkrieg have seen much trouble in the British Raj, with the British Revolution of 1925 being the catalyst for many of the events since, but the loyalty to the King-Emperor George remained steadfast among some of his Indian subjects, particularly those in the north. But one, unsinkable truth for the King-Emperor is that the new Dominion is no Raj- it is but just a shaving of the Jewel of the Crown. No longer does the Crown maintain an iron grip on the subcontinent, but a loose alliance with the north- a truth that does not help the demeanour of the King-Emperor in the slightest, and a truth that sits uncomfortably with the Delhi Government, of whom many members wish to break all ties with the King-Emperor and declare home rule. For now the King-Emperor still rules, but his power is diminished and his roar is now a soft bark."
 
 ### Tooltips ###
 DEH_ISAC_has_formed:0 "§Y[CAN.GetName]§! has formed the ISAC\n"
@@ -77,8 +80,8 @@ DEH_construction1_focus:0 "Start Building Civilian Factories"
 DEH_construction1_focus_desc:0 "Armed with new technologies, we can start building factories across our nation."
 DEH_construction2_focus:0 "Continue Building Civilian Factories"
 DEH_construction2_focus_desc:0 "We must continue to build civilian factories, to provide for our people."
-DEH_construction3_focus:0 "Continue Building Civilian Factories"
-DEH_construction3_focus_desc:0 "We must continue to build civilian factories, to provide for our people."
+DEH_construction3_focus:0 "Finish Building Civilian Factories"
+DEH_construction3_focus_desc:0 "We must complete our civilian factory expansion to ensure even in years to come we can provide for our people."
 DEH_digging:0 "Expand Mines"
 DEH_digging_desc:0 "In order to fuel our factories, we must expand our mines. New technologies will help us with this."
 DEH_railroads1:0 "Expand the Indian Rail Network"
@@ -113,8 +116,8 @@ DEH_diarchy:0 "Address the Diarchy"
 DEH_diarchy_desc:0 "Our most urgent issue is the status of administrative governance which have languished under the ancient relic of the diarchy - dual rule over the provinces shared between the officials of the central government and the domains of the many princely states. The premier is under great pressure to do away with the archaic system of indirect rule in favour of more efficient and democratic local administration."
 DEH_doctrine:0 "Choosing Doctrines for our Army"
 DEH_doctrine_desc:0 "We must chose a direction for our army. Should we emphasise speed and armoured vehicles, firepower, or sheer manpower? Our officers are now debating the best course of action."
-DEH_motorized:0 "Motorising the Indian Army"
-DEH_motorized_desc:0 "India is a huge country, with a wide range of climates, from deserts to jungles. We must motorise our army so it is more mobile and able to respond to threats quicker."
+DEH_motorized_focus:0 "Motorising the Indian Army"
+DEH_motorized_focus_desc:0 "India is a huge country, with a wide range of climates, from deserts to jungles. We must motorise our army so it is more mobile and able to respond to threats quicker."
 DEH_armor1:0 "Indian Armoured Corps"
 DEH_armor1_desc:0 "Providing our troops with armoured vehicles will give us a distinct edge in facing off against our enemies."
 DEH_armor2:0 "Expanding the Indian Armoured Corps"
