12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Ecuador_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ecuador_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 ECU_blackmonday:0 "Ripples of the March Crisis"
@@ -45,7 +45,7 @@ ECU_totalist_party_long:0 "Movimento Maximista Ecuatoriano"
 ECU_blackmondaycrisis:0 "The Thursday Crisis"
 ECU_blackmondaycrisis_desc:0 "Deep crisis takes a hold of our nation..."
 ECU_gallo:0 "Gallo Steps In"
-ECU_gallo_desc:0 "General Gallo has stepped in to ensure our nation's economy recovers and that our borders are safe
+ECU_gallo_desc:0 "General Gallo has stepped in to ensure our nation's economy recovers and that our borders are safe"
 ECU_stateofexecao:0 "State of Exception"
 ECU_stateofexecao_desc:0 "Extraordinary problems demand extraordinary solutions. Our nation is in the brink of falling to Syndicalists, and only a firm hand will keep our families and faith safe"
 ECU_isidrogone:0 "Deal with Isidro"
@@ -69,7 +69,7 @@ ECU_legalfacade_desc:0 "Some of the laws we need to get the nation back on track
 ECU_national_optimism:0 "National Optimism"
 ECU_national_optimism_desc:0 "A change in management can often do much for economic recovery, even as a placebo; even if our government did nothing, the fact that we are not La Agrolla already places renewed faith and growth in the economy"
 ECU_recovery:0 "Economic Recovery"
-ECU_recovery_desc:0 "-"
+ECU_recovery_desc:0 "Our political reforms have proven effective and our government should now procede with its plan to reinvigorate the Ecuadorian economy."
 ECU_stabilizationeffort:0 "Stabilisation Effort"
 ECU_stabilizationeffort_desc:0 "Much of the past political chaos is over; conservatives hide, knowing they are nothing; and the discredited Syndicalists cannot do anything that even remotely threatens our hegemony. A newfound sense of peace has finally settled in"
 ECU_justice:0 "Modernise Penal Code"
@@ -100,8 +100,10 @@ ECU_ecuatorianrubberboom2_desc:0 "Our domestic industry is diminute and destitut
 ECU_ecuatorianrubberboom_desc:0 "Pastanza has been having something of a rubber boom in the past decade. Now we need to ensure not only that production increases, but also that our army gets the lion's share of it!"
 ECU_stateovertures_desc:0 "It's not planned economy, we are just giving the Invisible Hand a small nudge"
 ECU_stateovertures2_desc:0 "Expanding the industrial capacity of our nation, especially when it comes to construction, is a vital part of any recovery effort. We will ensure that the state can finance public works in many areas, and thus help the economy in the long run"
-ECU_econ:0 "We must make an active effort to intervene in the economic chaos of our country, even if that means burning precious political capital"
-ECU_infrastructure:0 "One of the most important roles of the state is providing infrastructure, the aspects of a market where selfish agents will not invest in, but are vital for it's work. With the small added benefit of greatly improving army supply lines, of course"
+ECU_econ:0 "Economic Effort"
+ECU_econ_desc:0 "We must make an active effort to intervene in the economic chaos of our country, even if that means burning precious political capital"
+ECU_infrastructure:0 "Infrastructure Renewal"
+ECU_infrastructure_desc:0 "One of the most important roles of the state is providing infrastructure, the aspects of a market where selfish agents will not invest in, but are vital for it's work. With the small added benefit of greatly improving army supply lines, of course"
 ECU_commando:0 "Special Forces"
 ECU_trenchperimeters:0 "Weltkrieg Artillery Tactics"
 ECU_tothelastman:0 "Quito Perimiter"
@@ -112,14 +114,14 @@ ECU_subs:0 "Asymmetrical Naval Warfare"
 ECU_blockade:0 "Naval Raiding Doctrines"
 ECU_aero:0 "Aerial Supremacy"
 ECU_bombem:0 "Bomber Effort"
-ECU_econ:0 "Economic Effort"
 ECU_stateovertures:0 "State Overtures"
 ECU_ecuatorianrubberboom:0 "Ecuadorian Rubber Boom"
 ECU_stateovertures2:0 "Industrial Expansion" #factories
 ECU_ecuatorianrubberboom2:0 "Consumer Goods Effort"
 ECU_neweconomicplan:0 "New Economic Plans"
+ECU_neweconomicplan_desc:0 "With the success of our industrial and resource-cultivation plans, we can now procede with comprehensive economic reform. Already, economists call our economic resurgence 'The Miracle of Ecuador'. Let us show that this was no miracle, but the result of sensible policy!"
 ECU_education:0 "Higher Learning Investments"
-ECU_infrastructure:0 "Infrastructure Renewal"
+ECU_education_desc:0 "Education is the foundation of any prosperous society. Our lack of universities and trade-schools jeapordizes our burgeoning success. An expansion of Ecuador's system of higher education is long overdue."
 ECU_emergencyfactorysiezure:0 "Emergency Factory Seizure"
 ECU_poltechsloty:0 "Intellectual Amnesty"
 
